# becc

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json.debug  LICENSE.md  LICENSE.txt  README.md  build-debug-full-linux.sh  build-debug-full-vcpkg.ps1  build-debug-full-windows-vcpkg.ps1  build-debug-full.ps1  build-debug-full.sh  test_cc  test_cc.cc
src/: becc.cc  behh.cc  communication.cc  cryptography.cc  date_and_time.cc  generate.cc  icouchbase_core_interface.cc  ipostgresql_core_interface.cc  iscylladb_core_interface.cc  system.cc  utility.cc
src/inc/becc/: becc.hh  config.in.hh
src/inc/becc/constants/: file_const.hh  string_const.hh
src/inc/becc/functions/: communication.hh  cryptography.hh  date_and_time.hh  generate.hh  system.hh  utility.hh
src/inc/becc/interfaces/: icouchbase_core_interface.hh  ipostgresql_core_interface.hh  iscylladb_core_interface.hh
src/inc/becc/types/: auth_type.hh  look_type.hh
src/inc/behh/: becc.hh  config.in.hh  pch.hh
src/inc/behh/constants/: file_const.hh  string_const.hh
src/inc/behh/functions/: communication.hh  cryptography.hh  date_and_time.hh  generate.hh  system.hh  utility.hh
src/inc/behh/interfaces/: icouchbase_core_interface.hh  ipostgresql_core_interface.hh  iscylladb_core_interface.hh
src/inc/behh/types/: auth_type.hh  look_type.hh
tests/: .gitignore  CMakeLists.txt  example_in1.json  test_aes_openssl.cc  test_argon2.cc  test_barcode_qrcode.cc  test_base64.cc  test_communication_smtps.cc  test_communication_smtps.html  test_database_couchbase_rw.cc  test_database_couchbase_rw.json.debug  test_database_scylla_rw.cc  test_database_scylla_rw.json.debug  test_date_and_time.cc  test_file_enc_dec.cc  test_sdl3_check_screen_resolutions.cc
vendors/stb/stb/: stb_image_write.h
vendors/zxing-cpp/core/src/oned/: ODDataBarLimitedReader.cpp
